[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -29,12 +29,23 @@ DEADLINE: <2021-08-12 周四 23:00 +1m> SCHEDULED: <2021-08-12 周四 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-07-18 周日 23:00 ++1w> SCHEDULED: <2021-07-17 周六 18:00 ++1w>
+DEADLINE: <2021-07-25 周日 23:00 ++1w> SCHEDULED: <2021-07-24 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-07-10 周六 16:39]
+:LAST_REPEAT: [2021-07-17 周六 17:00]
 :END:
+- State "DONE"       from "TODO"       [2021-07-17 周六 17:00] \\
+  1. 完成了英雄背包的优化工作, 采用了新的排序规则对英雄动态排序
+     - 采用以字典缓存池CycleMgr来缓存滚动列表里item的ui, 有效提高了性能
+     - 目前在第一次加载还是稍微优点卡顿, 后续可以优化
+  2. 完成了对UI编辑器的基本属性的学习, 并产出文档
+  3. 这周《python91建议》阅读了15章
+  ------------------------------------------------
+  1. 时空之帽通关, 有趣的箱庭跳跃游戏
+  2. 进行一个原神的体验
+  ------------------------------------------------
+  1. 这周不知怎么的感觉没时间读91了
 - State "DONE"       from "TODO"       [2021-07-10 周六 16:39] \\
   1. 完成了添加/删除英雄时在英雄界面的信号处理, 不过目前存在以下问题:
      - 当英雄过多之后, 每一次追加新英雄都会导致严重的卡顿
