--- a/src/org/ref/python91个建议.org
+++ b/src/org/ref/python91个建议.org
@@ -1368,7 +1368,13 @@ pip提供了对包版本控制的支持, 也支持对安装包的查看和删除
 
 * 努力降低算法的复杂度
 #+BEGIN_VERSE
+随着问题规模的扩大, 算法复杂度对于性能的影响将越来越明显, 所以努力降低算法的复杂
+度可以有效提高性能
 #+END_VERSE
+1. 分析算法复杂度时几个注意点:
+   - 每执行一条指令的时间时确定的
+   - 每个语句的花费时间要根据语句的内容分析, 比如一个函数调用里面是一个O(n2)的循
+     环, 那这个语句的复杂度就是O(n2)
 
 * 掌握循环优化的基本技巧
 #+BEGIN_VERSE
@@ -1380,10 +1386,14 @@ pip提供了对包版本控制的支持, 也支持对安装包的查看和删除
    时, 将其转为局部变量会提高性能
 4. 如果有嵌套循环, 尽量将内部循环计算向外层移动
 
-
 * 使用生成器提高效率
 #+BEGIN_VERSE
+python的生成器采用惰性求值的迭代方式, 因此哪怕迭代无穷序列也仅会占用很少的内存
 #+END_VERSE
+1. 通过yield的语法来表明函数是生成器
+2. next()方法获取生成器的下一个值
+3. 生成器让代码更加优雅
+4. 是协程的基石
 
 * 使用不同的数据结构优化性能
 #+BEGIN_VERSE
