--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-07-17 周六 18:00 ++1w> DEADLINE: <2021-07-19 周一 12:00 ++1w>
+SCHEDULED: <2021-07-24 周六 18:00 ++1w> DEADLINE: <2021-07-26 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-07-10 周六 17:35]
+:LAST_REPEAT: [2021-07-17 周六 17:16]
 :END:
+- State "DONE"       from "TODO"       [2021-07-17 周六 17:16]
 - State "DONE"       from "TODO"       [2021-07-10 周六 17:35]
 - State "DONE"       from "TODO"       [2021-07-03 周六 17:36]
 - State "DONE"       from "TODO"       [2021-07-03 周六 17:36]
@@ -36,15 +37,16 @@ SCHEDULED: <2021-07-17 周六 18:00 ++1w> DEADLINE: <2021-07-19 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-07-17 周六 19:00 +1d>
+** TODO [#C] 完成leetcode一两道题                                    :learn:
+SCHEDULED: <2021-07-18 周日 19:00 +1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-07-16 周五 10:35]
+:LAST_REPEAT: [2021-07-17 周六 16:31]
 :END:
 
+- State "DONE"       from "TODO"       [2021-07-17 周六 16:31]
 - State "DONE"       from "TODO"       [2021-07-16 周五 10:35]
 - State "DONE"       from "TODO"       [2021-07-15 周四 09:18]
 - State "DONE"       from "TODO"       [2021-07-14 周三 10:09]
@@ -152,12 +154,13 @@ SCHEDULED: <2021-07-17 周六 19:00 +1d>
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
 ** TODO [#A] 学习《改善python程序的91个建议》                       :learn:
-SCHEDULED: <2021-07-17 周六 09:00 ++1d>
+SCHEDULED: <2021-07-18 周日 09:00 ++1d>
 :PROPERTIES:
 :STYLE:    habit
 :ATTACH: [[file:~/myproject/src/org/ref/python91个建议.org][python91个建议]]
-:LAST_REPEAT: [2021-07-16 周五 17:34]
+:LAST_REPEAT: [2021-07-17 周六 17:53]
 :END:
+- State "DONE"       from "TODO"       [2021-07-17 周六 17:53]
 - State "DONE"       from "TODO"       [2021-07-16 周五 17:34]
 - State "DONE"       from "TODO"       [2021-07-15 周四 20:53]
 - State "DONE"       from "TODO"       [2021-07-12 周一 14:02]
@@ -206,8 +209,11 @@ CLOSED: [2021-07-05 周一 15:37] SCHEDULED: <2021-07-05 周一 13:30>
 :ARCHIVE_TIME: 2021-07-10 周六 17:10
 :END:
 - State "DONE"       from "TODO"       [2021-07-05 周一 15:37]
-** DONE [#A] 重构英雄界面, 性能优化和高级排序规则                 :work:m8:
+*** DONE [#A] 重构英雄界面, 性能优化和高级排序规则                :work:m8:
 CLOSED: [2021-07-15 周四 17:24] SCHEDULED: <2021-07-15 周四 13:30>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-07-17 周六 17:13
+:END:
 - State "DONE"       from "TODO"       [2021-07-15 周四 17:24]
 * Appointment
 * Project
@@ -259,31 +265,32 @@ CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-07 周三 17:29>
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-** DONE [#A] UI编辑器工作流程和属性详解                           :work:m8:
+*** DONE [#A] UI编辑器工作流程和属性详解                          :work:m8:
 CLOSED: [2021-07-14 周三 21:10] SCHEDULED: <2021-07-12 周一 14:20> DEADLINE: <2021-07-17 周六 18:00>
 :PROPERTIES:
 :BLOCKER: children
+:ARCHIVE_TIME: 2021-07-17 周六 17:13
 :END:                          
 - State "DONE"       from "SCH"        [2021-07-14 周三 21:10]
-*** DONE ui文件生成步骤分析
+**** DONE ui文件生成步骤分析
 CLOSED: [2021-07-13 周二 20:51]
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:                          
 - State "DONE"       from "TODO"       [2021-07-13 周二 20:51]
-*** DONE ui文件加载流程分析
+**** DONE ui文件加载流程分析
 CLOSED: [2021-07-13 周二 20:51] SCHEDULED: <2021-07-13 周二 20:51>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 - State "DONE"       from "TODO"       [2021-07-13 周二 20:51]
-*** DONE ui界面通用属性含义分析
+**** DONE ui界面通用属性含义分析
 CLOSED: [2021-07-14 周三 20:58] SCHEDULED: <2021-07-13 周二 20:51>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 - State "DONE"       from "TODO"       [2021-07-14 周三 20:58]
-*** DONE 输出文档并分享
+**** DONE 输出文档并分享
 CLOSED: [2021-07-14 周三 21:10] SCHEDULED: <2021-07-14 周三 20:58>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
