[org] update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -29,12 +29,38 @@ DEADLINE: <2021-08-12 周四 23:00 +1m> SCHEDULED: <2021-08-12 周四 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-07-25 周日 23:00 ++1w> SCHEDULED: <2021-07-24 周六 18:00 ++1w>
+DEADLINE: <2021-08-08 周日 23:00 ++1w> SCHEDULED: <2021-08-07 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-07-17 周六 17:00]
+:LAST_REPEAT: [2021-07-31 周六 18:02]
 :END:
+- State "DONE"       from "TODO"       [2021-07-31 周六 18:02] \\
+  1. 完成了ui控件(ghosttouch, cnode, text)的学习
+  2. 完成了组队信息同步的功能
+     - 将除了专属装备以外的全部对全局英雄管理器的引用全部消除, 改为直接传入英雄对象
+     - 新增了多个用于刷新队友状态信息的信号
+     - 实现了删除/增加宠物动态影响英雄选择框的功能
+     - 修复了组队车轮战隐藏的bug, 一场战斗结束后战场序号没有正确切换
+  3. 完成了代码整洁之道前三章的学习
+  ------------------------------------------------
+  1. 死亡搁浅没玩, 沉迷原神
+  2. apex周末可以进行一个钻石的上
+  ------------------------------------------------
+  1. 在mvc的实践上还是存在一些问题, 没有深刻理解, 后面改正
+- State "DONE"       from "TODO"       [2021-07-24 周六 15:20] \\
+  1. 完成了英雄升星工单:
+     - 由于按钮存在多种状态, 使用状态机来表示按钮状态转换
+     - 由于升星的临时数据不需要持久化, 所有由view层创建model对象而不是创建一个全局对象
+  2. 优化了网络层:
+     - 现在所有收发数据在底层有完备的log, 不需要在自己添加log了
+     - 增加了一个客户端发包的装饰器, 如果参数一一对应可以大大减少代码量
+  3. 完成了《python91》的学习
+  ------------------------------------------------
+  1. 第二次西域胡杨聚餐, 这次吃的还行, 羊腿还是觉得太羴了, 吃不了
+  2. 这周把蓝牙耳机都丢了, g了, 不过耳机已经服役蛮久了, 可以考虑换掉
+  3. 史莱姆牧场完结, 接下来准备开始玩死亡搁浅
+  ------------------------------------------------
 - State "DONE"       from "TODO"       [2021-07-17 周六 17:00] \\
   1. 完成了英雄背包的优化工作, 采用了新的排序规则对英雄动态排序
      - 采用以字典缓存池CycleMgr来缓存滚动列表里item的ui, 有效提高了性能
@@ -237,12 +263,24 @@ DEADLINE: <2021-07-25 周日 23:00 ++1w> SCHEDULED: <2021-07-24 周六 18:00 ++1
   1. 自行车从家里邮过来之后组好, 送到车店保养.
   ------------------------------------------------
 ** TODO [#A] 每月归档到年度文件                                     :event:
-DEADLINE: <2021-07-30 周五 23:00 ++1m> SCHEDULED: <2021-07-30 周五 09:00 ++1m>
+DEADLINE: <2021-08-30 周一 23:00 ++1m> SCHEDULED: <2021-08-30 周一 09:00 ++1m>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-07-01 周四 00:59]
+:LAST_REPEAT: [2021-07-31 周六 19:44]
 :END:
+- State "DONE"       from "TODO"       [2021-07-31 周六 19:44] \\
+  第四个月, 工作上:
+  1. 完成了《改善python程序的91个建议》的学习
+  2. 优化网络协议使用方式和输出
+  3. 学习了5个UI控件的使用方式
+  4. 完成了英雄山关卡坐标和关卡分组标分配功能
+  5. 完成了对UI编辑器工作流程和属性学习
+  6. 完成了英雄升星工单
+  7. 完成了组队信息同步工单
+  生活上:
+  1. 日常生活非常的平静
+  2. 简易对我进我一个教育, 希望能够主动承担更多的责任, 工作更努力, 学习更勤奋
 - State "DONE"       from "TODO"       [2021-06-30 周三 22:59] \\
   入职以后的第三个月, 完成了转正, 工作上主要完成了:
   1. 完成了临时组队功能
