--- a/src/org/note/tech_note.org
+++ b/src/org/note/tech_note.org
@@ -385,3 +385,13 @@ zz/
 __import__函数中的fromlist实际上是没有具体含义的, 你可以理解为它只是一种标记, 当
 它不为空的时候, import为我们导入前面所写的字符串中最右边的模块. 当它为空的时候,
 import将为我们导入字符串最左边的模块.
+
+** 协议设计的若干问题
+1. 协议本身要是明确的, 没有依赖的, 一个协议只做一件事
+2. 协议刷新数据层, 界面层监听数据层获得数据的变化, 不要协议直接修改界面, 界面不一
+   定一直存在, 也不方便别人扩展
+3. 信号最好带足够的参数, 不要让使用者再额外获取
+4. 触发信号刷新页面时, 保持足够低的粒度, 不要一次性刷新全部内容
+5. 模型层要和界面层解耦, 即模型层设计的时候先当界面层不存在, 不要因为界面的需求而
+   设计信号
+   
