--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,14 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-07-24 周六 18:00 ++1w> DEADLINE: <2021-07-26 周一 12:00 ++1w>
+SCHEDULED: <2021-08-07 周六 18:00 ++1w> DEADLINE: <2021-08-09 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-07-17 周六 17:16]
+:LAST_REPEAT: [2021-07-31 周六 18:29]
 :END:
+- State "DONE"       from "TODO"       [2021-07-31 周六 18:29]
+- State "DONE"       from "TODO"       [2021-07-31 周六 18:29]
+- State "DONE"       from "TODO"       [2021-07-24 周六 15:39]
 - State "DONE"       from "TODO"       [2021-07-17 周六 17:16]
 - State "DONE"       from "TODO"       [2021-07-10 周六 17:35]
 - State "DONE"       from "TODO"       [2021-07-03 周六 17:36]
@@ -37,15 +40,23 @@ SCHEDULED: <2021-07-24 周六 18:00 ++1w> DEADLINE: <2021-07-26 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-07-18 周日 19:00 +1d>
+** TODO [#C] 完成leetcode一两道题                                   :learn:
+SCHEDULED: <2021-08-02 周一 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-07-17 周六 16:31]
+:LAST_REPEAT: [2021-07-30 周五 09:31]
 :END:
 
+- State "DONE"       from "TODO"       [2021-07-30 周五 09:31]
+- State "DONE"       from "TODO"       [2021-07-28 周三 13:40]
+- State "DONE"       from "TODO"       [2021-07-27 周二 09:18]
+- State "DONE"       from "TODO"       [2021-07-23 周五 09:39]
+- State "DONE"       from "TODO"       [2021-07-22 周四 16:14]
+- State "DONE"       from "TODO"       [2021-07-21 周三 09:16]
+- State "DONE"       from "TODO"       [2021-07-20 周二 09:24]
+- State "DONE"       from "TODO"       [2021-07-19 周一 09:08]
 - State "DONE"       from "TODO"       [2021-07-17 周六 16:31]
 - State "DONE"       from "TODO"       [2021-07-16 周五 10:35]
 - State "DONE"       from "TODO"       [2021-07-15 周四 09:18]
@@ -153,149 +164,21 @@ SCHEDULED: <2021-07-18 周日 19:00 +1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《改善python程序的91个建议》                       :learn:
-SCHEDULED: <2021-07-18 周日 09:00 ++1d>
+** TODO [#A] 学习《代码整洁之道》                                   :learn:
+SCHEDULED: <2021-08-01 周日 09:00 +2d>
 :PROPERTIES:
+:EFFORT: 0:60
 :STYLE:    habit
-:ATTACH: [[file:~/myproject/src/org/ref/python91个建议.org][python91个建议]]
-:LAST_REPEAT: [2021-07-17 周六 17:53]
+:LAST_REPEAT: [2021-07-31 周六 19:33]
 :END:
-- State "DONE"       from "TODO"       [2021-07-17 周六 17:53]
-- State "DONE"       from "TODO"       [2021-07-16 周五 17:34]
-- State "DONE"       from "TODO"       [2021-07-15 周四 20:53]
-- State "DONE"       from "TODO"       [2021-07-12 周一 14:02]
-- State "DONE"       from "TODO"       [2021-07-10 周六 15:40]
-- State "DONE"       from "TODO"       [2021-07-09 周五 17:40]
-- State "DONE"       from "TODO"       [2021-07-08 周四 21:11]
-- State "DONE"       from "TODO"       [2021-07-07 周三 20:22]
-- State "DONE"       from "TODO"       [2021-07-05 周一 12:34]
-- State "DONE"       from "TODO"       [2021-07-03 周六 16:40]
-- State "DONE"       from "TODO"       [2021-07-03 周六 16:40]
-- State "DONE"       from "TODO"       [2021-07-01 周四 20:55]
-- State "DONE"       from "TODO"       [2021-06-30 周三 10:20]
-- State "DONE"       from "TODO"       [2021-06-29 周二 10:24]
-- State "DONE"       from "TODO"       [2021-06-28 周一 11:07]
-** TODO [#A] UI控件学习 [0%]                                      :work:m8:
-DEADLINE: <2021-07-24 周六 18:00> SCHEDULED: <2021-07-19 周一 13:30>
-- [ ] 空节点
-- [ ] 矩形裁剪层
-- [ ] 贴图特效
-- [ ] 文本
-- [ ] 触摸区域
-** WAIT [#A] 准备转正报告                                            :work:
-SCHEDULED: <2021-06-07 周一 19:03>
-- State "WAIT"       from "TODO"       [2021-06-26 周六 15:54] \\
-  貌似不需要报告了, 太好了, 暂时暂停
-** Archive                                                        :ARCHIVE:
-*** DONE [#A] 优化战斗模型层 [6/6]                                :work:m8:
-CLOSED: [2021-07-02 周五 20:53] SCHEDULED: <2021-06-22 周二 10:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-07-03 周六 18:06
-:END:
-- State "DONE"       from "TODO"       [2021-07-02 周五 20:53]
-- [X] 组件拆分
-- [X] 基础关卡适配
-- [X] 特殊关卡适配 [100%]
-  - [X] 英雄山
-  - [X] 多队
-  - [X] 竞技场
-  - [X] 配置关卡
-- [X] 本地存储适配
-- [X] 调用处修改
-- [X] 总结
-*** DONE [#A] 处理增加删除GM指令bug                                    :m8:
-CLOSED: [2021-07-05 周一 15:37] SCHEDULED: <2021-07-05 周一 13:30>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-07-10 周六 17:10
-:END:
-- State "DONE"       from "TODO"       [2021-07-05 周一 15:37]
-*** DONE [#A] 重构英雄界面, 性能优化和高级排序规则                :work:m8:
-CLOSED: [2021-07-15 周四 17:24] SCHEDULED: <2021-07-15 周四 13:30>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-07-17 周六 17:13
-:END:
-- State "DONE"       from "TODO"       [2021-07-15 周四 17:24]
+- State "DONE"       from "TODO"       [2021-07-31 周六 19:33]
+- State "DONE"       from "TODO"       [2021-07-31 周六 19:33]
+- State "DONE"       from "TODO"       [2021-07-28 周三 14:49]
+- State "DONE"       from "TODO"       [2021-07-28 周三 14:49]
+- State "DONE"       from "TODO"       [2021-07-28 周三 13:40]
+- State "DONE"       from "TODO"       [2021-07-27 周二 09:49]
 * Appointment
 * Project
-** SCH [#A] 英雄升星                                              :work:m8:
-SCHEDULED: <2021-07-17 周六 13:00> DEADLINE: <2021-07-24 周六 18:00>
-:PROPERTIES:
-:BLOCKER: children
-:END:                          
-*** TODO 确认需求
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:                         
-*** WAIT 实现导表CP文件
-*** WAIT 制作UI界面
-*** WAIT 制作模型层
-*** WAIT 实现网络协议, 联调
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:END:
-** Archive                                                         :ARCHIVE:
-*** DONE [#A] 英雄山关卡坐标和关卡分组                            :work:m8:
-CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-05 周一 11:00> DEADLINE: <2021-07-06 周二 21:00>
-:PROPERTIES:
-:BLOCKER:  children
-:ARCHIVE_TIME: 2021-07-10 周六 17:10
-:END:                          
-- State "DONE"       from "SCH"        [2021-07-07 周三 17:29]
-**** DONE 追加导表字段
-CLOSED: [2021-07-05 周一 20:23] SCHEDULED: <2021-07-05 周一 11:00>
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:                          
-- State "DONE"       from "TODO"       [2021-07-05 周一 20:23]
-**** DONE 实现UI文件
-CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-05 周一 20:23>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-07-07 周三 17:29]
-**** DONE 实现坐标分配功能
-CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-07 周三 17:29>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-07-07 周三 17:29]
-**** DONE 实现关卡分组功能
-CLOSED: [2021-07-07 周三 17:29] SCHEDULED: <2021-07-07 周三 17:29>
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-*** DONE [#A] UI编辑器工作流程和属性详解                          :work:m8:
-CLOSED: [2021-07-14 周三 21:10] SCHEDULED: <2021-07-12 周一 14:20> DEADLINE: <2021-07-17 周六 18:00>
-:PROPERTIES:
-:BLOCKER: children
-:ARCHIVE_TIME: 2021-07-17 周六 17:13
-:END:                          
-- State "DONE"       from "SCH"        [2021-07-14 周三 21:10]
-**** DONE ui文件生成步骤分析
-CLOSED: [2021-07-13 周二 20:51]
-:PROPERTIES:                          
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:                          
-- State "DONE"       from "TODO"       [2021-07-13 周二 20:51]
-**** DONE ui文件加载流程分析
-CLOSED: [2021-07-13 周二 20:51] SCHEDULED: <2021-07-13 周二 20:51>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-07-13 周二 20:51]
-**** DONE ui界面通用属性含义分析
-CLOSED: [2021-07-14 周三 20:58] SCHEDULED: <2021-07-13 周二 20:51>
-:PROPERTIES:
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
-- State "DONE"       from "TODO"       [2021-07-14 周三 20:58]
-**** DONE 输出文档并分享
-CLOSED: [2021-07-14 周三 21:10] SCHEDULED: <2021-07-14 周三 20:58>
-:PROPERTIES:                          
-:TRIGGER+: parent todo!(DONE)
-:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
-:END:
 * Someday
 ** 学习《代码之外的生存指南》                                :learn:future:
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
@@ -303,7 +186,6 @@ CLOSED: [2021-07-14 周三 21:10] SCHEDULED: <2021-07-14 周三 20:58>
 ** 学习《重构 改善既有代码的设计》                            :learn:future:
 ** 学习 elisp                                                 :learn:future:
 ** 温习《流畅的python》                                      :learn:future:
-** 学习《代码整洁之道》                                      :learn:future:
 ** 温习《设计模式》                                          :learn:future:
 ** 学习《我所理解的cocox2d》                                 :learn:future:
 ** 练习字帖                                                  :learn:future:
