--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -4,7 +4,7 @@
 #+LANGUAGE: zh-Cn
 #+TAGS: { Live : date(d) event(e) shopping(s) }
 #+TAGS: { State : future(f) }
-#+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d!) CANCELED(c@)
+#+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d) CANCELED(c@)
 #+COLUMNS: %25ITEM %TODO %17Effort(Estimated Effort){:} %CLOCKSUM
 #+PROPERTY: EffORT_ALL 0 0:15 0:30 1:00 2:00 4:00 8:00
 #+OPTIONS: tex:t
@@ -13,7 +13,7 @@
 * Inbox
 * Next Action
 ** TODO [#A] 大壮名城G1-1018租房月志                                :event:
-DEADLINE: <2021-08-12 周四 23:00 +1m> SCHEDULED: <2021-08-12 周四 09:00 +1m>
+DEADLINE: <2021-09-12 周日 23:00 +1m> SCHEDULED: <2021-09-12 周日 09:00 +1m>
 :PROPERTIES:
 :LOGGING: DONE(@)
 :END:
@@ -29,12 +29,23 @@ DEADLINE: <2021-08-12 周四 23:00 +1m> SCHEDULED: <2021-08-12 周四 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-08-08 周日 23:00 ++1w> SCHEDULED: <2021-08-07 周六 18:00 ++1w>
+DEADLINE: <2021-08-15 周日 23:00 ++1w> SCHEDULED: <2021-08-14 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-07-31 周六 18:02]
+:LAST_REPEAT: [2021-08-07 周六 16:54]
 :END:
+- State "DONE"       from "TODO"       [2021-08-07 周六 16:54] \\
+  1. 完成了普通英雄分解的工单
+  2. 完成了优化删除的工单
+  3. 优化了点击自消失气泡的自动调节大小的逻辑
+  4. 调整了英雄星级的显示模式
+  5. 确认了英雄山英雄和界面重构的需求, 实现了英雄显示页面
+  6. 完成了代码整洁之道四到十章的学习
+  ------------------------------------------------
+  1. Apex钻石屁好漂亮, 好耶, 就是玩的时候一直坐牢
+  ------------------------------------------------
+  1. 仔细看了下代码整洁之道, 现在不在无脑注释了, 函数也要尽可能短
 - State "DONE"       from "TODO"       [2021-07-31 周六 18:02] \\
   1. 完成了ui控件(ghosttouch, cnode, text)的学习
   2. 完成了组队信息同步的功能
