--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -4,7 +4,7 @@
 #+LANGUAGE: zh-Cn
 #+TAGS: { Work : learn(l) work(w) }
 #+TAGS: { State : future(f) }
-#+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d!) CANCELED(c@)
+#+TODO: TODO(t) SCH(s) WAIT(w@) | DONE(d) CANCELED(c@)
 #+COLUMNS: %25ITEM %TODO %17Effort(Estimated Effort){:} %CLOCKSUM
 #+PROPERTY: EffORT_all 0 0:15 0:30 1:00 2:00 4:00 8:00
 #+PROPERTY: ATTACH
@@ -14,17 +14,16 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-08-07 周六 18:00 ++1w> DEADLINE: <2021-08-09 周一 12:00 ++1w>
+SCHEDULED: <2021-08-21 周六 18:00 ++1w> DEADLINE: <2021-08-23 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-07-31 周六 18:29]
+:LAST_REPEAT: [2021-08-07 周六 17:17]
 :END:
-- State "DONE"       from "TODO"       [2021-07-31 周六 18:29]
+- State "DONE"       from "TODO"       [2021-08-07 周六 17:17]
 - State "DONE"       from "TODO"       [2021-07-31 周六 18:29]
 - State "DONE"       from "TODO"       [2021-07-24 周六 15:39]
 - State "DONE"       from "TODO"       [2021-07-17 周六 17:16]
 - State "DONE"       from "TODO"       [2021-07-10 周六 17:35]
-- State "DONE"       from "TODO"       [2021-07-03 周六 17:36]
 - State "DONE"       from "TODO"       [2021-07-03 周六 17:36]
 - State "DONE"       from "TODO"       [2021-06-26 周六 17:19]
 - State "DONE"       from "TODO"       [2021-06-20 周日 10:25]
@@ -40,15 +39,25 @@ SCHEDULED: <2021-08-07 周六 18:00 ++1w> DEADLINE: <2021-08-09 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-12 周一 10:47]
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
-** TODO [#C] 完成leetcode一两道题                                   :learn:
-SCHEDULED: <2021-08-02 周一 19:00 ++1d>
+** TODO [#C] 完成leetcode一两道题                                    :learn:
+SCHEDULED: <2021-08-14 周六 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-07-30 周五 09:31]
+:LAST_REPEAT: [2021-08-13 周五 10:14]
 :END:
 
+- State "DONE"       from "TODO"       [2021-08-13 周五 10:14]
+- State "DONE"       from "TODO"       [2021-08-12 周四 10:15]
+- State "DONE"       from "TODO"       [2021-08-11 周三 09:29]
+- State "DONE"       from "TODO"       [2021-08-09 周一 09:18]
+- State "DONE"       from "TODO"       [2021-08-06 周五 10:28]
+- State "DONE"       from "TODO"       [2021-08-05 周四 09:34]
+- State "DONE"       from "TODO"       [2021-08-04 周三 09:36]
+- State "DONE"       from "TODO"       [2021-08-03 周二 09:42]
+- State "DONE"       from "TODO"       [2021-08-02 周一 09:40]
+- State "DONE"       from "TODO"       [2021-07-31 周六 14:11]
 - State "DONE"       from "TODO"       [2021-07-30 周五 09:31]
 - State "DONE"       from "TODO"       [2021-07-28 周三 13:40]
 - State "DONE"       from "TODO"       [2021-07-27 周二 09:18]
@@ -164,21 +173,107 @@ SCHEDULED: <2021-08-02 周一 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《代码整洁之道》                                   :learn:
-SCHEDULED: <2021-08-01 周日 09:00 +2d>
+** TODO [#A] 学习《代码整洁之道》                                    :learn:
+SCHEDULED: <2021-08-14 周六 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:60
 :STYLE:    habit
-:LAST_REPEAT: [2021-07-31 周六 19:33]
+:LAST_REPEAT: [2021-08-13 周五 21:06]
 :END:
-- State "DONE"       from "TODO"       [2021-07-31 周六 19:33]
+- State "DONE"       from "TODO"       [2021-08-13 周五 21:06]
+- State "DONE"       from "TODO"       [2021-08-12 周四 17:01]
+- State "DONE"       from "TODO"       [2021-08-11 周三 09:50]
+- State "DONE"       from "TODO"       [2021-08-09 周一 11:29]
+- State "DONE"       from "TODO"       [2021-08-07 周六 16:52]
+- State "DONE"       from "TODO"       [2021-08-05 周四 16:21]
+- State "DONE"       from "TODO"       [2021-08-04 周三 10:27]
+- State "DONE"       from "TODO"       [2021-08-03 周二 09:42]
+- State "DONE"       from "TODO"       [2021-08-02 周一 11:35]
 - State "DONE"       from "TODO"       [2021-07-31 周六 19:33]
 - State "DONE"       from "TODO"       [2021-07-28 周三 14:49]
-- State "DONE"       from "TODO"       [2021-07-28 周三 14:49]
-- State "DONE"       from "TODO"       [2021-07-28 周三 13:40]
 - State "DONE"       from "TODO"       [2021-07-27 周二 09:49]
+** Archive                                                         :ARCHIVE:
+*** DONE [#A] 优化删除                                                 :m8:
+CLOSED: [2021-08-05 周四 16:21] SCHEDULED: <2021-08-05 周四 11:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-08-07 周六 16:58
+:END:
+- State "DONE"       from "TODO"       [2021-08-05 周四 16:21]
+** DONE [#A] 给队友穿戴装备                                            :m8:
+CLOSED: [2021-08-12 周四 10:16] SCHEDULED: <2021-08-12 周四 13:00>
 * Appointment
 * Project
+** Archive                                                         :ARCHIVE:
+*** DONE [#A] 英雄分解                                            :m8:work:
+CLOSED: [2021-08-05 周四 16:21] SCHEDULED: <2021-08-02 周一 09:00> DEADLINE: <2021-08-05 周四 14:57>
+:PROPERTIES:
+:BLOCKER: children
+:ARCHIVE_TIME: 2021-08-07 周六 16:58
+:END:                          
+- State "DONE"       from "SCH"        [2021-08-05 周四 16:21]
+**** DONE 确认需求
+CLOSED: [2021-08-03 周二 10:02] SCHEDULED: <2021-08-03 周二 10:00>
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+- State "DONE"       from "TODO"       [2021-08-03 周二 10:02]
+**** DONE 模型信号设计
+CLOSED: [2021-08-03 周二 10:02] SCHEDULED: <2021-08-03 周二 10:02>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-08-03 周二 10:02]
+**** DONE 界面实现
+CLOSED: [2021-08-03 周二 16:12] SCHEDULED: <2021-08-03 周二 10:02>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-08-03 周二 16:12]
+**** DONE 网络协议实现
+CLOSED: [2021-08-03 周二 20:57] SCHEDULED: <2021-08-03 周二 16:12>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-08-03 周二 20:57]
+**** DONE 测试
+CLOSED: [2021-08-05 周四 16:21] SCHEDULED: <2021-08-03 周二 20:57>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+- State "DONE"       from "TODO"       [2021-08-05 周四 16:21]
+** DONE [#A] 英雄山阵容和装备ui调整                                    :m8:
+CLOSED: [2021-08-12 周四 10:16] SCHEDULED: <2021-08-09 周一 11:00> DEADLINE: <2021-08-12 周四 21:00>
+:PROPERTIES:
+:BLOCKER: children
+:END:                          
+*** DONE 确认需求
+CLOSED: [2021-08-07 周六 15:57]
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+- State "DONE"       from "TODO"       [2021-08-07 周六 15:57]
+*** DONE 制作英雄显示框
+CLOSED: [2021-08-11 周三 09:30] SCHEDULED: <2021-08-09 周一 11:00>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE 制作装备显示框
+CLOSED: [2021-08-11 周三 09:30] SCHEDULED: <2021-08-11 周三 09:30>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE 处理信号同步
+CLOSED: [2021-08-11 周三 09:30] SCHEDULED: <2021-08-11 周三 09:30>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE 测试 
+CLOSED: [2021-08-12 周四 10:16] SCHEDULED: <2021-08-11 周三 09:30>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
 * Someday
 ** 学习《代码之外的生存指南》                                :learn:future:
 ** 学习《Unity3D 游戏开发》                                  :learn:future:
