[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -29,12 +29,36 @@ DEADLINE: <2021-09-12 周日 23:00 +1m> SCHEDULED: <2021-09-12 周日 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-08-15 周日 23:00 ++1w> SCHEDULED: <2021-08-14 周六 18:00 ++1w>
+DEADLINE: <2021-08-29 周日 23:00 ++1w> SCHEDULED: <2021-08-28 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-08-07 周六 16:54]
+:LAST_REPEAT: [2021-08-21 周六 16:02]
 :END:
+- State "DONE"       from "TODO"       [2021-08-21 周六 16:02] \\
+  1. 完成了基础商店功能的制作
+  2. 完成了对货币协议的拆分
+  3. 在ui公共组件新建了两个组件, 并使用其优化了部分之前的代码
+     - uisort: 支持对类滚动框的ui容器控件进行排序
+     - radiobutton: 支持点击范围检测的radiobutton(继承自公共组件)
+  4. 修复了英雄山背包因为英雄信号改动导致的同步失效问题
+  5. 看完了代码整洁之道
+  ------------------------------------------------
+  1. apex出了传家宝, 大概470箱左右, 泪目, 果然我是非洲人
+  2. 机器人的拳套还是好康的
+  ------------------------------------------------
+  1. 可惜没有早点看到代码整洁之道, 之前写的很多代码在可读性上有很大的欠缺, 对测试
+     也没有太注意
+- State "DONE"       from "TODO"       [2021-08-15 周日 09:03] \\
+  1. 完成了新的英雄山英雄背包工单
+  2. 完成了给队友的英雄山英雄穿戴装备的功能
+  3. 完成了代码整洁之道十一到十六章的学习
+  4. 确认了基础商店功能的需求, 初步设计了模型层, 实现了部分模型层代码
+  ------------------------------------------------
+  1. 原神进入长草期了, G
+  2. 杀戮尖塔空洞骑士mod还蛮好玩的
+  ------------------------------------------------
+  1. 如何维护一个类只有一个功能(SRP)是一个听起来很容易但做起来却不简单的事情
 - State "DONE"       from "TODO"       [2021-08-07 周六 16:54] \\
   1. 完成了普通英雄分解的工单
   2. 完成了优化删除的工单
