--- a/src/org/ref/代码整洁之道.org
+++ b/src/org/ref/代码整洁之道.org
@@ -3,16 +3,13 @@
 * 整洁代码
 1. 代码永远不会消失, 因为代码代表着对需求最精确的约束
 2. 不要因为进度或是经理的要求而放松对代码质量的把控
-3. 为了赶时间而让代码混乱只会让你永远赶不上时间
-4. 整洁的代码有以下特征:
-   - 只做一件事
-   - 短小精悍
+3. 为了   - 短小精悍
    - 命名规范易读
    - 实体尽量少, 依赖尽量少
    - 能够通过测试
    - 没有重复代码
-5. 阅读代码的时间要远远大于修改代码的时间, 所以让代码易读可以有效提高工作效率
-6. 随时保持代码整洁, 改完后保证代码比改之前更干净
+4. 阅读代码的时间要远远大于修改代码的时间, 所以让代码易读可以有效提高工作效率
+5. 随时保持代码整洁, 改完后保证代码比改之前更干净
 
 * 有意义的命名
 1. 名副其实, 命名要清楚的表现它的作用, 如果还需要注释证明还不够名副其实
@@ -320,17 +317,24 @@
            def UseAxe():
                self.axe.Chop()
      #+end_src
-3. 一开始就完整的设计好系统是不可能的, 我们应该只去实现今天的用户故事, 然后重构,
+
+
+* 系统
+1. 软件系统应该将启动过程和运行时的逻辑分离, 使用一个main模块构造所有对象, 然后运
+   行时可以假定所有的模块已经构造好了
+   - 依赖注入
+   - 工厂函数
+2. 一开始就完整的设计好系统是不可能的, 我们应该只去实现今天的用户故事, 然后重构,
    明天再扩展系统, 实现新的用户故事. 与物理系统相比, 由于软件系统较短的生命周期,
    使得架构可以动态增长, 只要我们在设计的时候将系统合适的切分
-4. 测试驱动系统架构, 没有必要先做大设计(Big Design Up Front), 因为人们在心理上
+3. 测试驱动系统架构, 没有必要先做大设计(Big Design Up Front), 因为人们在心理上
    抵触丢弃既成之事. 与建筑不同, 建筑一点设计好就无法做出根本性的改变, 而软件不同
    软件是一个快速变化的系统, 可以对系统结构做出根本性的修改.
    所以最佳的软件系统架构是由模块化和关注面领域构成, 每个关注面都用对象实现, 不同
    的领域用最不具有侵害性的方式整合到一起
-5. 决策不要太早, 因为最后时刻决策拥有的信息是最多的, 可以做出最正确的决定
-6. 系统需要特定领域的语言(DSL), 这个可以填平领域概念和实现概念代码之间的壕沟
-7. 无论是系统还是模块的设计, 别忘了使用大概可工作的最简单方案
+4. 决策不要太早, 因为最后时刻决策拥有的信息是最多的, 可以做出最正确的决定
+5. 系统需要特定领域的语言(DSL), 这个可以填平领域概念和实现概念代码之间的壕沟
+6. 无论是系统还是模块的设计, 别忘了使用大概可工作的最简单方案
 
 * 迭进
 1. 简单设计的四条原则(重要程度由上到下):
@@ -403,3 +407,73 @@
 4. 在保证代码能够通过测试的前提下一点点替换不合理的设计, 每替换一次都测试一次,
    确保修改之后功能正确
 5. 当代码经过若干此重构之后整洁之后, 重构完毕, 并且功能保持了正确
+
+* 味道与启发
+** 一般性问题
+1. 一个源文件里面最好只存在一种语言, 如果不得不使用其他语言也最好控制其数量和范围
+2. 函数和类应该符合最小惊异原则, 即应该实现其他程序员有理由期待的行为, 如果明显的
+   行为没有被实现, 读者和用户就不能再依赖直觉, 不得不阅读代码细节
+3. 如果代码存在边界情况应该仔细测试, 确保在任何条件下都能够正常工作
+4. 不要忽视编译器或者编辑器给出的安全提示
+5. 绝对不要重复代码, 每个重复的代码都代表了缺失的抽象
+   - 比较隐蔽的是在不同模块重复出现的ifelse, 可以用多态来代替
+   - 更加隐蔽的是采用了类似算法但是具体代码不同的模块, 可以使用策略模式来修正
+6. 分离高层次的一般概念和低层次的细节概念, 高层次通用概念放到基类中, 细节放到子类
+   中, 比如一个stack基类中不应该有stack的充满百分的函数(这是个低层次概念)
+7. 基类不应依赖于派生类, 通常来说基类应该多派生类一无所知(有些有限状态机基类和子
+   类是紧密耦合的, 这个不在讨论范围之内, 只考虑通常情况)
+8. 类中的方法越少越好, 函数知道的变量越少越好, 类拥有的实体变量越少越好
+9. 应该及时将代码中的死代码删除(不掉用的代码, 可能是永远不会达到的分支, 异常等等),
+   他们会随着时间变得逐渐腐败
+10. 函数和变量应该在靠近被使用的地方定义, 私有函数应该在其被调用的位置后面定义
+11. 代码的前后规范要保持一致
+12. 不要写一些没有意义的注释, 不会用到的代码来混淆视听
+13. 不互相依赖的东西不应该相互耦合, 比如一个通用的enum不应该放到一个特殊的类之中,
+    出现这种情况大概率是为了图方便, 但不应该这样, 调用者不应该了解一个完全和enum
+    不相干的类
+14. 尽量避免特性依恋, 即调用一个类的接口的接口, 这相当于你已经了解了类的实现细节,
+    封装失效了
+15. 函数里不要有算子参数(bool, 枚举, 常量), 这明确的表明了你的函数做了不止一件事
+    情
+16. 软件开发者做出的最重要的决定就是在哪里放置代码, 所有务必将代码放置到合适的位
+    置上
+17. 使用静态函数要确保其不会有多态行为
+18. 变量的命名最好具有解释性, 只要将一系列计算过程打散为命名良好的中间值, 整段代
+    码就会变得透明
+19. 一定要了解自己的代码到底在做什么, 如果不确定就重构之
+20. 将逻辑依赖替换为物理依赖, 依赖者模块不应改对被依赖模块有任何假定
+21. 对于给定的选择类型, 如果多于一个switch语句, 则多余的switch语句应该以多态替代
+    之, 并取代系统中其他类似的switch语句
+22. 每个成员都应该遵循团队的代码标准
+23. 以命名常量替代魔术数, 魔术数指所有不能自我描述的符号, 所以需要命名常量来描述
+    其含义
+24. 写代码要确保其准确性, 明白代码的准确作用. 比如货币使用整形而不是浮点数, 如果
+    调用了可能返回null的函数是否检查其返回值
+25. 结构要大于约定, 约定使用永远无法代替结构的强制性. 比如抽象类会强迫所有子类实
+    现接口, 而约定却没法强制执行
+26. 将一系列逻辑判断合并为一个命名清晰的接口会让代码更加易读J
+27. 肯定性条件大于否定性条件
+28. 每个函数应该做一件事且仅做一件事
+29. 不要遮掩代码之间的时序耦合, 如果函数之间的调用有顺序关系, 可以将多个函数通过
+    返回值和参数使他们具有明确的先后关系, 即后一个函数需要前一个函数的返回值作为
+    参数
+30. 将边界条件封装到一处, 比如一段代码里出现了多次n+1, 那么应将此n+1赋值给一个
+    命名清晰的变量, 其他使用n+1的位置替换成这个变量
+31. 每个函数中的语句都应该在同一个抽象层级上, 该层级应该是函数名所示操作的下一层
+32. 如果有配置性的数据, 应该在较高的层次上存放, 而不应该在代码的底层存放配置值
+** 命名
+1. 命名是对软件可读性影响最大一部分, 90%的可读性由命名来决定, 所以慎重命名
+2. 命名应该同其抽象层级相符合
+3. 命名尽可能使用标准命名法, 装饰器就用decorator, 代理就用delegate
+4. 命名时不要带有歧义, 意思一定要准确
+5. 命名的长度应该和其作用域成正比
+6. 避免前缀编码, 比如m_, f, s等
+7. 名称应该说明其副作用, 比如一个函数用来获取一个对象, 如果对象不存在还负责创建,
+   那么它的名字应该为createOrReturnObj
+** 测试
+1. 测试应该覆盖到所有语句, 而不是以测试的数量来判断测试是否充足
+2. 使用覆盖率工具可以清晰的得到测试的覆盖率
+3. 小测试易于编写, 更加重要的是它是一份清晰的用法文档
+4. 特别注意对边界条件的测试, 90%的代码错误都出现于边界
+5. 如果在某个函数中发现一个缺陷, 那么最好全面测试这个函数, 你可能会发现多个缺陷
+6. 测试应该快速
