--- a/src/org/gtd/work.org
+++ b/src/org/gtd/work.org
@@ -14,11 +14,12 @@
 * Inbox
 * Next Action
 ** TODO [#A] 完成每周周报                                            :work:
-SCHEDULED: <2021-08-21 周六 18:00 ++1w> DEADLINE: <2021-08-23 周一 12:00 ++1w>
+SCHEDULED: <2021-08-28 周六 18:00 ++1w> DEADLINE: <2021-08-30 周一 12:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
-:LAST_REPEAT: [2021-08-07 周六 17:17]
+:LAST_REPEAT: [2021-08-21 周六 16:25]
 :END:
+- State "DONE"       from "TODO"       [2021-08-21 周六 16:25]
 - State "DONE"       from "TODO"       [2021-08-07 周六 17:17]
 - State "DONE"       from "TODO"       [2021-07-31 周六 18:29]
 - State "DONE"       from "TODO"       [2021-07-24 周六 15:39]
@@ -40,14 +41,20 @@ SCHEDULED: <2021-08-21 周六 18:00 ++1w> DEADLINE: <2021-08-23 周一 12:00 ++1
 - State "DONE"       from "TODO"       [2021-04-06 周二 09:23]
 - State "DONE"       from "TODO"       [2021-03-29 周一 9:50]
 ** TODO [#C] 完成leetcode一两道题                                    :learn:
-SCHEDULED: <2021-08-14 周六 19:00 ++1d>
+SCHEDULED: <2021-08-22 周日 19:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:15
 :LINK: [[https://leetcode-cn.com][leetcode]]
 :STYLE:    habit
-:LAST_REPEAT: [2021-08-13 周五 10:14]
+:LAST_REPEAT: [2021-08-21 周六 14:33]
 :END:
 
+- State "DONE"       from "TODO"       [2021-08-21 周六 14:33]
+- State "DONE"       from "TODO"       [2021-08-20 周五 10:43]
+- State "DONE"       from "TODO"       [2021-08-19 周四 20:24]
+- State "DONE"       from "TODO"       [2021-08-18 周三 17:28]
+- State "DONE"       from "TODO"       [2021-08-17 周二 16:02]
+- State "DONE"       from "TODO"       [2021-08-16 周一 15:49]
 - State "DONE"       from "TODO"       [2021-08-13 周五 10:14]
 - State "DONE"       from "TODO"       [2021-08-12 周四 10:15]
 - State "DONE"       from "TODO"       [2021-08-11 周三 09:29]
@@ -173,13 +180,30 @@ SCHEDULED: <2021-08-14 周六 19:00 ++1d>
 - State "DONE"       from "TODO"       [2021-03-31 Wed 23:57]
 - State "DONE"       from "TODO"       [2021-03-30 Tue 23:41]
 - State "DONE"       from "TODO"       [2021-03-30 周二 09:49]
-** TODO [#A] 学习《代码整洁之道》                                    :learn:
-SCHEDULED: <2021-08-14 周六 09:00 ++1d>
+** Archive                                                         :ARCHIVE:
+*** DONE [#A] 优化删除                                                 :m8:
+CLOSED: [2021-08-05 周四 16:21] SCHEDULED: <2021-08-05 周四 11:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-08-07 周六 16:58
+:END:
+- State "DONE"       from "TODO"       [2021-08-05 周四 16:21]
+*** DONE [#A] 给队友穿戴装备                                           :m8:
+CLOSED: [2021-08-12 周四 10:16] SCHEDULED: <2021-08-12 周四 13:00>
+:PROPERTIES:
+:ARCHIVE_TIME: 2021-08-16 周一 09:17
+:END:
+*** DONE [#A] 学习《代码整洁之道》                                  :learn:
+SCHEDULED: <2021-08-22 周日 09:00 ++1d>
 :PROPERTIES:
 :EFFORT: 0:60
 :STYLE:    habit
-:LAST_REPEAT: [2021-08-13 周五 21:06]
+:LAST_REPEAT: [2021-08-21 周六 15:41]
+:ARCHIVE_TIME: 2021-08-21 周六 16:01
 :END:
+- State "DONE"       from "TODO"       [2021-08-21 周六 15:41]
+- State "DONE"       from "TODO"       [2021-08-20 周五 21:03]
+- State "DONE"       from "TODO"       [2021-08-19 周四 21:01]
+- State "DONE"       from "TODO"       [2021-08-16 周一 10:10]
 - State "DONE"       from "TODO"       [2021-08-13 周五 21:06]
 - State "DONE"       from "TODO"       [2021-08-12 周四 17:01]
 - State "DONE"       from "TODO"       [2021-08-11 周三 09:50]
@@ -192,15 +216,6 @@ SCHEDULED: <2021-08-14 周六 09:00 ++1d>
 - State "DONE"       from "TODO"       [2021-07-31 周六 19:33]
 - State "DONE"       from "TODO"       [2021-07-28 周三 14:49]
 - State "DONE"       from "TODO"       [2021-07-27 周二 09:49]
-** Archive                                                         :ARCHIVE:
-*** DONE [#A] 优化删除                                                 :m8:
-CLOSED: [2021-08-05 周四 16:21] SCHEDULED: <2021-08-05 周四 11:00>
-:PROPERTIES:
-:ARCHIVE_TIME: 2021-08-07 周六 16:58
-:END:
-- State "DONE"       from "TODO"       [2021-08-05 周四 16:21]
-** DONE [#A] 给队友穿戴装备                                            :m8:
-CLOSED: [2021-08-12 周四 10:16] SCHEDULED: <2021-08-12 周四 13:00>
 * Appointment
 * Project
 ** Archive                                                         :ARCHIVE:
@@ -242,34 +257,67 @@ CLOSED: [2021-08-05 周四 16:21] SCHEDULED: <2021-08-03 周二 20:57>
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
 - State "DONE"       from "TODO"       [2021-08-05 周四 16:21]
-** DONE [#A] 英雄山阵容和装备ui调整                                    :m8:
+*** DONE [#A] 英雄山阵容和装备ui调整                                   :m8:
 CLOSED: [2021-08-12 周四 10:16] SCHEDULED: <2021-08-09 周一 11:00> DEADLINE: <2021-08-12 周四 21:00>
 :PROPERTIES:
 :BLOCKER: children
+:ARCHIVE_TIME: 2021-08-16 周一 09:17
 :END:                          
-*** DONE 确认需求
+**** DONE 确认需求
 CLOSED: [2021-08-07 周六 15:57]
 :PROPERTIES:                          
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:                          
 - State "DONE"       from "TODO"       [2021-08-07 周六 15:57]
-*** DONE 制作英雄显示框
+**** DONE 制作英雄显示框
 CLOSED: [2021-08-11 周三 09:30] SCHEDULED: <2021-08-09 周一 11:00>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** DONE 制作装备显示框
+**** DONE 制作装备显示框
 CLOSED: [2021-08-11 周三 09:30] SCHEDULED: <2021-08-11 周三 09:30>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** DONE 处理信号同步
+**** DONE 处理信号同步
 CLOSED: [2021-08-11 周三 09:30] SCHEDULED: <2021-08-11 周三 09:30>
 :PROPERTIES:
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
 :END:
-*** DONE 测试 
+**** DONE 测试 
 CLOSED: [2021-08-12 周四 10:16] SCHEDULED: <2021-08-11 周三 09:30>
+:PROPERTIES:                          
+:TRIGGER+: parent todo!(DONE)
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+*** DONE [#A] 实现基础商店功能                                         :m8:
+CLOSED: [2021-08-19 周四 20:24] SCHEDULED: <2021-08-16 周一 13:00> DEADLINE: <2021-08-20 周五 21:00>
+:PROPERTIES:
+:BLOCKER: children
+:ARCHIVE_TIME: 2021-08-21 周六 16:01
+:END:                          
+**** DONE 确认需求
+CLOSED: [2021-08-16 周一 16:21]
+:PROPERTIES:                          
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:                          
+**** DONE 设计模型层, 实现模型层并完成单元测试
+CLOSED: [2021-08-16 周一 16:21] SCHEDULED: <2021-08-16 周一 16:21>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+**** DONE 实现网络协议
+CLOSED: [2021-08-16 周一 16:21] SCHEDULED: <2021-08-16 周一 16:21>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+**** DONE 实现界面层
+CLOSED: [2021-08-18 周三 15:24] SCHEDULED: <2021-08-16 周一 16:21>
+:PROPERTIES:
+:TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
+:END:
+**** DONE 联调
+CLOSED: [2021-08-19 周四 20:24] SCHEDULED: <2021-08-18 周三 15:24>
 :PROPERTIES:                          
 :TRIGGER+: parent todo!(DONE)
 :TRIGGER:  next-sibling todo!(TODO) scheduled!("++0h") chain!("TRIGGER")
