[org]update note

--- a/src/org/gtd/live.org
+++ b/src/org/gtd/live.org
@@ -29,12 +29,24 @@ DEADLINE: <2021-09-12 周日 23:00 +1m> SCHEDULED: <2021-09-12 周日 09:00 +1m>
   3. 本月电费50, 物业+水103
   4. 1+2(一个月房租+两个月押金) 6000
 ** TODO [#A] 归档并回顾一周的计划                                   :event:
-DEADLINE: <2021-08-29 周日 23:00 ++1w> SCHEDULED: <2021-08-28 周六 18:00 ++1w>
+DEADLINE: <2021-09-05 周日 23:00 ++1w> SCHEDULED: <2021-09-04 周六 18:00 ++1w>
 :PROPERTIES:
 :STYLE:    habit
 :LOGGING: logrepeat DONE(@)
-:LAST_REPEAT: [2021-08-21 周六 16:02]
+:LAST_REPEAT: [2021-08-28 周六 16:47]
 :END:
+- State "DONE"       from "TODO"       [2021-08-28 周六 16:47] \\
+  1. 完成了英雄山战斗根据总战力跳过战斗阶段的需求
+     - 主要工作量在于根据新的战斗力求值公式计算敌方的战斗力(己方由服务器计算)
+  2. 补丁制作流程相关
+     - 理清了构建机制作补丁的全部流程, 并实现了一个本地构建的脚本
+     - 创建了ios和android的持续交付补丁构建工程
+     - 申请了外网版本控制svn目录(尚未审批完毕)
+  3. 阅读了《我所理解的cocos2d-x》前两章
+  ------------------------------------------------
+  1. 双人成行真的不错, 虽然有点小贵, 但是游戏性拉满了
+  ------------------------------------------------
+  1. 这周周四上班读了一天的小说, 有点不应该
 - State "DONE"       from "TODO"       [2021-08-21 周六 16:02] \\
   1. 完成了基础商店功能的制作
   2. 完成了对货币协议的拆分
